--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.15",
     "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.12",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "venta_online_2020019": "file:"
   }
 }
